# recall

./: .gitignore  README.md  pyproject.toml
src/recall/: __init__.py  cli.py  config.py  embed.py  mcp_server.py  models.py  search.py  service.py  store.py
tests/: conftest.py  test_recall.py
