[project]
name = "recall"
version = "0.1.0"
description = "Local issue-memory for coding agents: hybrid (keyword + semantic) recall of past issues, causes, and fixes over SQLite."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4.2",
    "mcp>=1.2.0",
    "typer>=0.12.0",
    "pydantic>=2.6",
]

[project.scripts]
recall = "recall.cli:app"
recall-mcp = "recall.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recall"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
